# yambo-data-r2q-spark-job

./: .gitignore  README.md  fix-iam-policy.json  pyproject.toml  response-test.json  response-test2.json  response.json
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml  docker-build.yml
dags/: README.md  requirements.txt  yambo_data_pipeline.py
docker/: .dockerignore  Dockerfile  requirements.txt  spark-defaults.conf
docs/: DEPLOYMENT.md
k8s/: config-map.yaml  irsa-test-pod.yaml  lambda-serviceaccount.yaml  namespace.yaml  rbac.yaml  service-account.yaml  spark-application-check.yaml  spark-application-extract-prod.yaml  spark-application-extract.yaml  spark-history-server-prod.yaml  spark-history-server.yaml  spark-operator-crd.yaml  spark-operator-deployment.yaml
lambda/spark_job_trigger/: handler.py  handler_old.py  requirements.txt
scripts/: create-test-stripe-data.sh  create_test_stripe_data.py  package-lambda.py  package-lambda.sh
src/: __init__.py
src/api/: __init__.py  auth.py  client.py
src/checkpoint/: __init__.py  manager.py
src/spark_jobs/: __init__.py  check_job.py  extract_job.py  main.py  transformations.py
src/utils/: config.py  logging_setup.py  s3_utils.py
terraform/: response.json
terraform/environments/dev/: main.tf
terraform/environments/prod/: main.tf
terraform/modules/dynamodb/: main.tf
terraform/modules/ecr/: main.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/karpenter/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf
terraform/modules/scheduler/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf
tests/: __init__.py  test_basic.py
(+2 files in other folders)
